src/test/ui/privacy/privacy3.stderr
error[E0432]: unresolved import `bar::gpriv`
  --> $DIR/privacy3.rs:18:9
   |
LL |     use bar::gpriv;
   |         ^^^^^^^^^^ no `gpriv` in `bar`

error: requires `sized` lang_item

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
